# discord_bot

./: .env  Cargo.toml  bot.js  botMessages.json  cargo.toml  package-lock.json  package.json  quickSort.js  roleToAssign.json
backups/: 1593341672995.json  1593440988285.json  example_backup.json
commands/: addRole.js  addXP.js  backup.js  channelCreate.js  closeChannel.js  help.js  leaderboard.js  manualRoleReset.js  newModmailMsg.js  pinAmount.js  pinCheck.js  preCacheMsg.js  prefix.js  raw_leaderboard.js  reactAutoRole.js  reactionRoleAssign.js  reactionRoleRemove.js  roleAssign.js
commands/helperFunctions/: fetchPartial.js  parseArgs.js
src/: event_handler.rs  framework.rs  main.rs  user_cache.rs
src/commands/: leaderboard.rs  mod.rs  ping.rs
src/functions/: add_xp.rs  mod.rs  pin.rs
