[package]
name = "hamtar0"
version = "0.1.0"
authors = ["Oliver <oliver@archer.fi>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "0.2"
dotenv = "0.15"
futures = "0.3"
rand = "0.7"
num-traits = "0.2"
futures-util = "0.3"

[dependencies.serenity]
version = "0.9.1"
default_features = true
features = ["collector"]

[dependencies.sqlx]
version = "0.4.0-beta.1"
default-features = false
features = [ "runtime-tokio", "macros", "postgres", "bigdecimal" ]
